<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:padding="10dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/transparent_primary"
    tools:context="com.watotoappgmail.watotoapp2.LoginActivity">



   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text=""
           android:textAppearance="?android:textAppearanceMedium"
           android:textStyle="bold"/>

       <ScrollView
           android:id="@+id/login_form"
           android:layout_width="match_parent"
           android:layout_height="match_parent">
           <LinearLayout
               android:id="@+id/email_login_form"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">

               <android.support.design.widget.TextInputLayout
                   android:layout_width="match_parent"
                   android:background="@drawable/welcome_tab_login_credential_background"
                   android:layout_height="match_parent">

                   <AutoCompleteTextView
                       android:id="@+id/user_name_id"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:hint="Phone number"
                       android:inputType="phone"
                       android:maxLines="1"
                       android:singleLine="true"
                       android:drawableLeft="@drawable/ic_phone"/>

               </android.support.design.widget.TextInputLayout>

               <android.support.design.widget.TextInputLayout
                   android:layout_width="match_parent"
                   android:background="@drawable/welcome_tab_login_credential_background"
                  android:layout_marginTop="15dp"
                   android:layout_height="match_parent">

                   <EditText
                       android:id="@+id/user_password_id"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:hint="@string/prompt_password"
                       android:imeOptions="actionUnspecified"
                       android:inputType="textPassword"
                       android:maxLines="1"
                       android:singleLine="true"
                       android:drawableLeft="@drawable/ic_password"/>

               </android.support.design.widget.TextInputLayout>

               <Button
                   android:id="@+id/btn_sign_in_id"
                   style="?android:textAppearanceSmall"
                   android:layout_width="match_parent"
                   android:layout_height="@dimen/reg_edit_text_height"
                   android:layout_marginTop="16dp"
                   android:textAllCaps="false"
                   android:text="@string/action_sign_in"
                   android:background="@color/colorPrimary"
                   android:textColor="@color/white"
                   android:textStyle="bold" />
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textColor="@color/white"
                   android:text="@string/or_register_message"
                   android:textStyle="bold"
                   android:textAppearance="?android:textAppearanceSmall"
                   android:gravity="center"
                   android:layout_marginTop="@dimen/login_reg_extra_fields_margin_top"
                   />

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textColor="@color/white"
                   android:text="@string/create_account_message"
                   android:textStyle="bold"
                   android:textAppearance="?android:textAppearanceMedium"
                   android:gravity="center"
                   android:layout_marginTop="@dimen/login_reg_extra_fields_margin_top"
                   android:id="@+id/welcome_tab_create_account_text_view_id" />

           </LinearLayout>
       </ScrollView>
   </LinearLayout>
    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress_bar_id"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />
</RelativeLayout>
